# rust-cryptography-engineering

./: Cargo.toml  README.md
benches/: chap_5_blake3.rs
src/: bin.rs  main.rs
src/chapter_5/: mod.rs
src/homework_1/: mod.rs
