[package]
name = "rust-cryptography-engineering"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-exercises"
path = "./src/main.rs"

[[bench]]
name = "chap_5_blake3"
harness = false

[dependencies]
blake3 = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
criterion = "0.4.0"
hex = "0.4.3"
ring = "0.16.20"
sha3 = "0.10.6"
